<resources>

    <!-- Manifest messages -->
    <string name="app_name">Please Note Me</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="title_activity_dictionary">Dictionary Activity</string>

    <!-- App common messages -->
    <string name="common_please_note_me">Please Note Me</string>
    <string name="common_action_settings">Settings</string>
    <string name="common_note_me">Note me</string>

    <!-- Action buttons -->
    <string name="button_save_note">Save</string>
    <string name="button_delete_note">Delete</string>
    <string name="button_back_button">Back</string>
    <string name="button_search_button">Search</string>

    <!-- Hint messages -->
    <string name="hint_note_title">Tap to add a title</string>
    <string name="hint_note_content">Tap to add a content</string>
    <string name="hint_filter_hint">Tap to filter</string>
    <string name="hint_search_text">words to search</string>

    <!-- Warning messages -->
    <string name="warning_no_changes_saved">No changes were saved</string>
    <string name="warning_note_saved">Note was saved successfully</string>
    <string name="warning_note_erased">Note was deleted successfully</string>
    <string name="warning_note_validation_invalid">Note validation failed</string>
    <string name="warning_delete_this_note">Delete this note?</string>
    <string name="warning_confirm_delete">Yes</string>
    <string name="warning_cancel_delete">No</string>
    <string name="warning_no_definition_found">No definition Found</string>

    <!-- Error messages -->
    <string name="error_unreachable_ws">Unreachable service. Try again later…</string>
    <string name="error_dictionary_not_found_500">Dictionary Service Not Found</string>
    <string name="button_dictionary">Dictionary</string>
    <string name="warning_keyword_validation_failed">Word Validation Failed</string>


</resources>
