<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_note"
        android:onClick="saveMessage"
        android:layout_toLeftOf="@+id/delete_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back_button"
        android:onClick="deleteMessage"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <EditText
        android:id="@+id/edit_title"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textMultiLine"
        android:hint="@string/hint_note_title"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <EditText
        android:id="@+id/edit_content"
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:hint="@string/hint_note_content"
        android:layout_below="@+id/edit_title"
        />


</RelativeLayout>